[gd_scene load_steps=9 format=3 uid="uid://cf8p7euecjnml"]

[ext_resource type="Script" path="res://scripts/menu/menu.gd" id="1_y06qh"]
[ext_resource type="FontFile" uid="uid://cv18ebcbhaqa3" path="res://fonts/Bitmgothic.ttf" id="2_58acr"]
[ext_resource type="AudioStream" uid="uid://cthhjihcgtnax" path="res://audio/sounds/ambients/rain.mp3" id="2_q70vq"]
[ext_resource type="FontFile" uid="uid://b6iwsul3jv023" path="res://fonts/dpcomic.ttf" id="3_xg2al"]

[sub_resource type="Theme" id="Theme_xnyw2"]
default_font = ExtResource("2_58acr")
default_font_size = 84

[sub_resource type="Theme" id="Theme_m15n4"]
default_font = ExtResource("2_58acr")

[sub_resource type="LabelSettings" id="LabelSettings_vy7bb"]
font = ExtResource("3_xg2al")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_ylhj7"]
font = ExtResource("2_58acr")
font_size = 128
font_color = Color(0.69, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -23.0
offset_right = -10.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y06qh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1314.0
offset_bottom = 1011.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 577.0
offset_top = 822.0
offset_right = 869.0
offset_bottom = 935.0
scale = Vector2(1.12218, 1.02662)
pivot_offset = Vector2(648, 493)
theme = SubResource("Theme_xnyw2")
text = "Return
"
flat = true

[node name="ButtonsContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -78.0
offset_right = -75.0
offset_bottom = 2.00003
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.85302, 4.85302)

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_m15n4")
text = "Play"
flat = true

[node name="Settings" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_m15n4")
text = "Settings"
flat = true

[node name="Exit" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_m15n4")
text = "Exit"
flat = true

[node name="CenterContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.531
anchor_top = 0.5
anchor_right = 0.531
anchor_bottom = 0.5
offset_left = -345.68
offset_top = -154.0
offset_right = 358.32
offset_bottom = 276.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Master volume"
label_settings = SubResource("LabelSettings_vy7bb")
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_q70vq")
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 334.0
offset_top = 123.0
offset_right = 1030.0
offset_bottom = 251.0
text = "The Ritual"
label_settings = SubResource("LabelSettings_ylhj7")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
